<resources>
    <string name="app_name">CameraFollow</string>
    <string name="page_preview">face attributes detect(video)</string>
    <string name="page_ir_preview">ir liveness detect(video)</string>
    <string name="face_recognize_mode">face compare 1:n(video vs database,rgb liveness detect)</string>
    <string name="ir_face_recognize_mode">face compare 1:n(video vs database,ir liveness detect)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="processing">processing</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="register">register</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="face_manage">face manage</string>
    <string name="batch_register">batch register</string>
    <string name="notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="registering_please_wait">registering,please wait</string>
    <string name="clear_faces">clear faces</string>
    <string name="no_face_need_to_delete">no face need to delete</string>
    <string name="notification">notification</string>
    <string name="confirm_delete">delete those %d images and face features?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>
    <string name="reset">Reset</string>
    <string name="start">start</string>
    <string name="reset_parameter">ResetParameter</string>
    <string name="center">center</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="reset_motor">resetMotor</string>
    <string name="start_record">startRecord</string>
    <string name="stop_record">stopRecord</string>
    <string name="h_scale_0">水平角度0</string>
    <string name="_40">40</string>
    <string name="v_scale_0">垂直角度0</string>
    <string name="_30">30</string>
    <string name="h_scale_1">水平角度1</string>
    <string name="_5">5</string>
    <string name="v_scale_1">垂直角度1</string>
</resources>
