<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <TextureView
                android:id="@+id/mCameraFrontPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="PxUsage" />

            <com.shenlai.cameraFollow.widget.FaceRectView
                android:id="@+id/mFrontFaceRectView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="PxUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/center"
                android:textColor="@color/colorAccent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextureView
                android:id="@+id/mCameraBackPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.shenlai.cameraFollow.widget.FaceRectView
                android:id="@+id/mBackFaceRectView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/center"
                android:textColor="@color/colorAccent" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/mStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="start"
            android:text="@string/start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mResetParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetParameter"
                android:text="@string/reset_parameter" />

            <EditText
                android:id="@+id/XScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/h_scale_0"
                android:hint="@string/h_scale_0"
                android:inputType="number"
                android:text="@string/_40"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/YScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/v_scale_0"
                android:hint="@string/v_scale_0"
                android:inputType="number"
                android:text="@string/_30"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/XXScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/h_scale_1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/_5" />

            <EditText
                android:id="@+id/YYScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/v_scale_1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/_5" />
        </LinearLayout>

        <Button
            android:id="@+id/mResetMotor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetMotor"
            android:text="@string/reset_motor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mUp"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/up" />

            <Button
                android:id="@+id/mDown"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/down" />

            <Button
                android:id="@+id/mLeft"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/left" />

            <Button
                android:id="@+id/mRight"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:text="@string/right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mStartRecord"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="record"
                android:text="@string/start_record" />

            <Button
                android:id="@+id/mStopRecord"
                style="@style/TextAppearance.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="record"
                android:text="@string/stop_record" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>